# hailo-apps-infra

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  run_tests.sh  setup_env.sh
doc/: README.md  RELEASE_NOTES.md
doc/developer_guide/: README.md  app_development.md  compilation.ipynb  debugging_with_gst_shark.md  gstreamer_helper_pipelines.md  retraining.ipynb  retraining_example.md  writing_postprocess.md
doc/user_guide/: README.md  configuration.md  installation.md  repository_structure.md  running_applications.md  running_parallel.md
hailo_apps/config/: README.md  __init__.py  config.yaml  config_manager.py  get_hef.sh  inputs.json  networks.json  resources_config.yaml  test_definition_config.yaml
hailo_apps/cpp/: README.md
hailo_apps/cpp/classification/: README.md
hailo_apps/cpp/common/: toolbox.cpp  toolbox.hpp
hailo_apps/cpp/common/general/: hailo_common.hpp
hailo_apps/cpp/depth_estimation_mono/: CMakeLists.txt  README.md
hailo_apps/cpp/depth_estimation_stereo/: README.md
hailo_apps/cpp/instance_segmentation/: CMakeLists.txt  README.md  instance_seg_postprocess.cpp  instance_seg_postprocess.hpp  instance_segmentation.cpp  visualization_config.json
hailo_apps/cpp/object_detection/: CMakeLists.txt  README.md  object_detection.cpp  visualization_config.json
hailo_apps/cpp/object_detection/utils/: utils.cpp  utils.hpp
hailo_apps/cpp/onnxrt_hailo_pipeline/: CMakeLists.txt  README.md
hailo_apps/cpp/oriented_object_detection/: CMakeLists.txt  README.md
hailo_apps/cpp/pose_estimation/: CMakeLists.txt  README.md
hailo_apps/cpp/semantic_segmentation/: README.md
hailo_apps/cpp/standalone_apps/classification/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/depth_estimation_mono/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/depth_estimation_stereo/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/instance_segmentation/: CMakeLists.txt  instance_segmentation.cpp
hailo_apps/cpp/standalone_apps/object_detection/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/onnxrt_hailo_pipeline/: CMakeLists.txt  instance_seg_postprocess.hpp  onnx_decode.cpp  onnx_decode.hpp
hailo_apps/cpp/standalone_apps/oriented_object_detection/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/pose_estimation/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/semantic_segmentation/: CMakeLists.txt
hailo_apps/cpp/standalone_apps/zero_shot_classification/: CMakeLists.txt  clip_example.cpp
hailo_apps/installation/: __init__.py  compile_cpp.py  config_utils.py  download_resources.py  install_python_bindings.py  post_install.py  set_env.py
hailo_apps/postprocess/: meson.build
hailo_apps/postprocess/cpp/: all_detections_cropper.cpp  all_detections_cropper.hpp  clip.cpp  clip_croppers.cpp  clip_croppers.hpp  depth_estimation.cpp  hailo_nms_decode.hpp  meson.build  mobilenet_ssd.cpp  ocr_postprocess.cpp  ocr_postprocess.hpp  repvgg_reid.cpp  scrfd.cpp  yolo_hailortpp.cpp  yolo_hailortpp.hpp  yolov5seg.cpp  yolov8pose_postprocess.cpp
hailo_apps/python/core/common/: README.md  __init__.py  buffer_utils.py  camera_utils.py  core.py  db_handler.py  defines.py  embedding_visualizer.py  hailo_inference.py  hailo_logger.py  hef_utils.py  installation_utils.py  parser.py  telegram_handler.py  toolbox.py
hailo_apps/python/core/gstreamer/: gstreamer_app.py  gstreamer_common.py  gstreamer_helper_pipelines.py
hailo_apps/python/gen_ai_apps/: README.md  __init__.py
hailo_apps/python/gen_ai_apps/agent_tools_example/: .gitignore  AGENTS.md  README.md  agent.py  cli_state.py  config.py  state_manager.py  system_prompt.py  yaml_config.py
hailo_apps/python/gen_ai_apps/examples/: README.md
hailo_apps/python/gen_ai_apps/gen_ai_utils/: README.md  __init__.py
hailo_apps/python/gen_ai_apps/hailo_ollama/: README.md
hailo_apps/python/gen_ai_apps/simple_llm_chat/: README.md  __init__.py  simple_llm_chat.py
hailo_apps/python/gen_ai_apps/simple_vlm_chat/: README.md  __init__.py  simple_vlm_chat.py
hailo_apps/python/gen_ai_apps/simple_whisper_chat/: README.md  __init__.py  simple_whisper_chat.py
hailo_apps/python/gen_ai_apps/vlm_chat/: README.md  backend.py  vlm_chat.py
hailo_apps/python/gen_ai_apps/voice_assistant/: README.md  voice_assistant.py
hailo_apps/python/pipeline_apps/clip/: README.md  README_SETUP.md  STRUCTURE.md  clip.py  clip_pipeline.py  clip_text_utils.py  example_embeddings.json  gui.py  text_image_matcher.py
hailo_apps/python/pipeline_apps/depth/: depth.py  depth_pipeline.py
hailo_apps/python/pipeline_apps/detection/: README.md  detection.py  detection_pipeline.py
hailo_apps/python/pipeline_apps/detection_simple/: README.md  detection_simple.py  detection_simple_pipeline.py
hailo_apps/python/pipeline_apps/face_recognition/: README.md  face_recognition.py  face_recognition_pipeline.py
hailo_apps/python/pipeline_apps/instance_segmentation/: README.md  instance_segmentation.py  instance_segmentation_pipeline.py
hailo_apps/python/pipeline_apps/multisource/: README.md  multisource.py  multisource_pipeline.py
hailo_apps/python/pipeline_apps/paddle_ocr/: README.md  paddle_ocr.py  paddle_ocr_pipeline.py
hailo_apps/python/pipeline_apps/pose_estimation/: README.md  pose_estimation.py  pose_estimation_pipeline.py
hailo_apps/python/pipeline_apps/reid_multisource/: README.md  reid_multisource.py  reid_multisource_pipeline.py
hailo_apps/python/standalone_apps/: README.md
local_resources/: __init__.py  ocr_config.json
local_resources/piper_models/: .gitkeep
scripts/: check_installed_packages.sh  cleanup_installation.sh  generate_config_jsons.py  hailo_installer.sh  hailo_installer_python.sh  hailo_python_installation.sh  release_hailo.sh  uninstall_hailo_packages.sh
tests/: README.md  TEST_FRAMEWORK_DOCUMENTATION.md  all_tests.py  conftest.py  test_agent_testing_framework.py  test_control.yaml  test_face_recon.py  test_gen_ai.py  test_hef_utils.py  test_installation.py  test_runner.py  test_sanity_check.py  test_standalone_runner.py  test_utils.py  verify_configs.py  voice_assistant_unit_tests.py
(+137 files in other folders)
